updated file system connected scripts and styles - added basic device logic

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 </head>
 <body>
+    <div id="coreContainerBackground">
+        <img src="./public/media/image/rectangular/system/logo/olabs_1a1a1a.png" alt="oLabs Logo">
+    </div>
     <div id="coreContainer">
         <h1>oLabs</h1>
     </div>
