changed menu-link hrefs to #0 (temp close menu fix)

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
                 </span>
             </a>
             <li class="menu-item">
-                <a href="#menu">
+                <a href="#0">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/testing.png" alt="Testing Icon">
                     </span>    
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu">
+                <a href="#0">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/projects-2.png" alt="Projects Icon">
                     </span>    
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu">
+                <a href="#0">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/network-folder.png" alt="Network Folder Icon">
                     </span>    
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu">
+                <a href="#0">
                     <span class="menu-item-icon">
                         <img src="./public/media/image/rectangular/system/icons/contact.png" alt="Contact Us Icon">
                     </span>    
