added database page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     </div>
 
 
-
     <!-- ORIGINAL WORKING MAIN MENU -->
 
     <div class="main-menu-container">
@@ -62,9 +61,9 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#menu" data-menu="Contact">
+                <a href="./database.html" data-menu="Database">
                     <span class="menu-item-icon">
-                        <img src="./public/media/image/rectangular/system/icons/contact.png" alt="Contact Us Icon">
+                        <img src="./public/media/image/rectangular/system/icons/database.png" alt="Database Icon">
                     </span>
                 </a>
             </li>
