added color key to media types, fixed images

--- a/spreadshield.html
+++ b/spreadshield.html
@@ -96,8 +96,13 @@
                 <div class="page-section">
                     <div class="page-section-header">
                         <h3>Media</h3>
+                        <div class="color-key">
+                            <div class="color pink"><img src="./public/media/image/rectangular/system/icons/image.png" alt="Image Icon"></div>
+                            <div class="color yellow"><img src="./public/media/image/rectangular/system/icons/video-2.png" alt="Video Icon"></div>
+                            <div class="color orange"><img src="./public/media/image/rectangular/system/icons/audio.png" alt="Audio Icon"></div>
+                        </div>
                     </div>
-        
+                    
                     <div class="page-section-body">
 
                         <div class="page-section-image"><img src="./public/media/image/rectangular/projects/spreadshield/1.jpg" alt=""></div>
