added VR and test VR SpreadMenu model

--- a/vr-test.html
+++ b/vr-test.html
@@ -27,7 +27,7 @@
         <div class="page">
             <div class="page-header">
                 <div class="page-title">
-                    <h1>oLabs Dashboard</h1>
+                    <h1>VR & AR</h1>
                 </div>
             </div>
 
@@ -36,22 +36,22 @@
         
                 <div class="page-section">
                     <div class="page-section-header">
-                        <h3>Projects</h3>
+                        <h3>VR Home</h3>
                     </div>
         
                     <div class="page-section-body">
                         <div class="site-link">
                             <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
-                            <a href="./spreadshield.html">
-                                <span>SpreadShield</span>
+                            <a href="./vr-main-menu.html">
+                                <span>VR Main Menu</span>
                             </a>
                         </div>
                         <div class="site-link">
                             <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
-                            <a href="./widespread-guide.html">
-                                <span>WideSpread</span>
+                            <a href="./vr-spreadspace.html">
+                                <span>SpreadSpace (FlexFloor)</span>
                             </a>
-                        </div>
+                        </div> 
 
                     </div>
                 </div>
