--- a/widespread-guide.html
+++ b/widespread-guide.html
@@ -114,6 +114,57 @@
     </div>
 
 
+    <!-- ORIGINAL MAIN MENU -->
+    <div class="main-menu-container">
+        <ul id="menu">
+            <!-- open-menu id for click event -->
+            <a class="menu-button" id="openMenu" href="#menu" title="Show Navigation">
+                <span class="menu-item-icon open-menu">
+                    <img src="./public/media/image/rectangular/system/icons/menu.png" alt="Menu Icon">
+                </span>
+            </a>
+            <a class="menu-button" href="#" title="Hide Navigation">
+                <span class="menu-item-icon close-menu">
+                    <img src="./public/media/image/rectangular/system/icons/close.png" alt="Close Menu Icon">
+                </span>
+            </a>
+            <li class="menu-item">
+                <a href="./projects" data-menu="Projects">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/projects-2.png" alt="Projects Icon">
+                    </span>
+                </a>
+            </li>
+
+            <li class="menu-item">
+                <a href="./index.html" data-menu="Home">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/server-root.png"
+                            alt="Home Icon">
+                    </span>
+                </a>
+            </li>
+
+            <li class="menu-item">
+                <a href="./testing.html" data-menu="Testing">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/testing.png" alt="Testing Icon">
+                    </span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="./database.html" data-menu="Database">
+                    <span class="menu-item-icon">
+                        <img src="./public/media/image/rectangular/system/icons/database.png" alt="Database Icon">
+                    </span>
+                </a>
+            </li>
+        </ul>
+    
+    </div>
+
+    <div id="pageMenu">
+    </div>
 
 
 
