--- a/vr-main-menu.html
+++ b/vr-main-menu.html
@@ -6,6 +6,15 @@
     <title>oLabs - VR Main Menu</title>
 
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <!-- <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script> -->
+    <!-- <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script> -->
+
+
+    <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+
+    <!-- <script src="https://unpkg.com/aframe-motion-capture-components/dist/aframe-motion-capture-components.min.js"></script> -->
     
     <link rel="stylesheet" href="./public/style/vr.css">
     <script src="./public/logic/vr-main-menu.js"></script>
@@ -25,30 +34,148 @@
         </div>
     </div>
     <div id="vrScene">
-        <a-scene>
+        <a-scene avatar-recorder environment="preset: checkerboard;" fog="type: exponential; color: #000000; density: 0.15">
             <a-assets>
                 <a-asset-item id="vrSpreadMenu" src="./public/media/3d-model/vr-spread-menu_1a1a1a.gltf"></a-asset-item>
+                <img id="oLabsLogo2d" src="./public/media/image/rectangular/system/logo/olabs_1a1a1a.png" alt="oLabs Logo">
+
+                    <a-mixin id="cube" geometry="primitive: box"></a-mixin>
+                    <a-mixin id="cube-hovered" material="color: magenta"></a-mixin>
+                    <a-mixin id="cube-selected" material="color: cyan"></a-mixin>
+                    <a-mixin id="red" material="color: red"></a-mixin>
+                    <a-mixin id="green" material="color: green"></a-mixin>
+                    <a-mixin id="blue" material="color: blue"></a-mixin>
+                    <a-mixin id="yellow" material="color: yellow"></a-mixin>
+                    <a-mixin id="sphere" geometry="primitive: sphere"></a-mixin>
             </a-assets>
 
-            <a-light type="directional" position="0 30 0" color="#fff"></a-light>
+<a-entity light="type: ambient; color: #BBB"></a-entity>
+<a-entity light="type: directional; color: #FFF; intensity: 0.6" position="-0.5 1 1"></a-entity>
 
 
-            <a-entity position="0 -0.5 -1.3" rotation="-70 0 0">
-                <a-light type="spot" color="#555" position="0 0.25 0" light="type: point; color: #555; groundColor: #39848e; distance: 0.5; intensity: 3.42; penumbra: 0.2; castShadow: true"></a-light>
-                <!-- <a-ring color="teal" radius-inner="0.3" radius-outer="0.5" color="lime"></a-ring> -->
-                <a-torus color="aqua" arc="360" radius="0.2" radius-tubular="0.1" rotation="90 0 0" material="color: #000000"
-                    geometry="arc: 360; radius: 1.64; radiusTubular: 0.02; segmentsRadial: 37; segmentsTubular: 33"
-                    scale="0.15 0.15 1" visible="" position="0.00003 0 -0.00168"></a-torus>
-                <a-gltf-model src="#vrSpreadMenu" position="0 0 0" scale="0.6 0.6 0.6"></a-gltf-model>
+
+    <a-entity position="0 2.2 4">
+        <a-entity camera look-controls wasd-controls>
+            <a-entity position="0 0 -3" geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.05;"
+                material="color: cyan; shader: flat" cursor="maxDistance: 30; fuse: true">
+                <a-animation begin="click" easing="ease-in" attribute="scale" fill="forwards" from="0.2 0.2 0.2" to="1 1 1"
+                    dur="150"></a-animation>
+                <a-animation begin="fusing" easing="ease-in" attribute="scale" fill="backwards" from="1 1 1"
+                    to="0.2 0.2 0.2" dur="1500"></a-animation>
             </a-entity>
+            <a-box look-at="[camera]" position="0 0.25 -3" color="aqua" scale="2 1 1" material="opacity: 0.15;"></a-box>
+        </a-entity>
+    </a-entity>
+
+
+
+<a-entity id="cardinals-container" geometry="type: box;" material="color: red; roughness: 1;" position="0 0 0">
+
+
+    <a-entity layout="type: box; columns: 4; margin: 4; align: center;" position="0 4 -8">
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+    </a-entity>
+
+
+    <a-entity layout="type: box; columns: 4; margin: 4; align: center;" position="-8 4 0" rotation="0 90 0">
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+    </a-entity>
+
+
+    <a-entity layout="type: box; columns: 4; margin: 4; align: center;" position="0 4 8" rotation="0 180 0">
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+    </a-entity>
+
+
+    <a-entity layout="type: box; columns: 4; margin: 4; align: center;" position="8 4 0" rotation="0 -90 0">
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+        <a-image src="#oLabsLogo2d" width="1" height="0.5"></a-image>
+    </a-entity>
+ 
+
+
+</a-entity>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<a-entity position="0 -0.5 -0.5" rotation="-70 0 0">
+    <a-light type="spot" color="#fff" position="0 0.25 0"
+        light="type: point; color: #fff; groundColor: #39848e; distance: 0.25; intensity: 1; penumbra: 0.2; castShadow: true"></a-light>
+    <!-- <a-ring color="teal" radius-inner="0.3" radius-outer="0.5" color="lime"></a-ring> -->
+    <a-torus color="aqua" arc="360" radius="0.2" radius-tubular="0.1" rotation="90 0 0" material="color: #000000"
+        geometry="arc: 360; radius: 1.64; radiusTubular: 0.02; segmentsRadial: 37; segmentsTubular: 33"
+        scale="0.15 0.15 1" visible="" position="0.00003 0 -0.00168"></a-torus>
+    <a-gltf-model src="#vrSpreadMenu" position="0 0 0" scale="0.6 0.6 0.6"></a-gltf-model>
+</a-entity>
+
+
+            <a-light type="directional" position="0 30 0" color="#555" light="intensity: 4.2; castShadow: true"></a-light>
+
 
 
 
             <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box> -->
 
             <!-- <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane> -->
-            <a-sky color="#000"></a-sky>
+
+            <a-sky color="#111"></a-sky>
+
+
+
+
+
         </a-scene>
+
     </div>
 </body>
 </html>
