--- a/spreadshield2.html
+++ b/spreadshield2.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/aframe-layout-component@5.3.0/dist/aframe-layout-component.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.2.0/dist/aframe-extras.min.js"></script>
 
     <!-- <script src="https://unpkg.com/aframe-motion-capture-components/dist/aframe-motion-capture-components.min.js"></script> -->
     
@@ -26,8 +27,12 @@
         <a-scene avatar-recorder fog="type: exponential; color: #222; density: 0" xr-mode-ui="enabled: true">
             <a-assets>
                 <a-asset-item id="vrSpreadCity" src="./public/media/3d-model/city.glb"></a-asset-item>
+                <a-asset-item id="cityBlock1" src="./public/media/3d-model/city-block_1a.glb"></a-asset-item>
                 <a-asset-item id="vrSpreadMenu" src="./public/media/3d-model/vr-spread-menu_1a1a1a.gltf"></a-asset-item>
                 <a-asset-item id="mclaren1" src="./public/media/3d-model/McLaren_1a1a1a.gltf"></a-asset-item>
+                <a-asset-item id="lambo2" src="./public/media/3d-model/lambo_2a.glb"></a-asset-item>
+                <a-asset-item id="spreadGallery1" src="./public/media/3d-model/spread-gallery-2.glb"></a-asset-item>
+                <a-asset-item id="spreadGallery2" src="./public/media/3d-model/spread-gallery-3.glb"></a-asset-item>
                 <img id="oLabsLogo2d" src="./public/media/image/rectangular/system/logo/olabs_1a1a1a.png" alt="oLabs Logo">
 
                     <a-mixin id="cube" geometry="primitive: box"></a-mixin>
@@ -45,7 +50,7 @@
 
 
 
-    <a-entity position="0 2.2 4">
+    <a-entity position="0 2.2 0">
         <a-entity camera look-controls wasd-controls>
             <a-entity position="0 0 -3" geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.05;"
                 material="color: cyan; shader: flat" cursor="maxDistance: 30; fuse: true">
@@ -60,7 +65,7 @@
 
 
 
-<a-entity id="cardinals-container" geometry="type: box;" material="color: red; roughness: 1;" position="0 0 10">
+<a-entity id="cardinals-container" geometry="type: box;" material="color: red; roughness: 1;" position="0 0 0">
 
 
     <a-entity layout="type: box; columns: 4; margin: 4; align: center;" position="0 4 -8">
@@ -115,12 +120,35 @@
 </a-entity>
 
 
-<a-entity id="spreadCityContainer">
+<!-- <a-entity id="spreadCityContainer">
     <a-gltf-model src="#vrSpreadCity" position="250 0 250" scale="1.8 1.8 1.8"></a-gltf-model>
+</a-entity> -->
+
+
+<!-- BEST CITY SCENE -->
+
+<a-entity id="spreadCityContainer">
+    <a-gltf-model src="#cityBlock1" position="160 0 60" scale="0.01 0.01 0.01"></a-gltf-model>
 </a-entity>
 
-<a-entity id="mclaren1">
-    <a-gltf-model src="#mclaren1" position="-6 0.1 -3" scale="1 1 1" rotation="0 32 0"></a-gltf-model>
+
+<!-- SPREAD GALLERY -->
+<!-- <a-entity id="spreadGallery1a">
+    <a-gltf-model src="#spreadGallery1" position="-8 5 0" scale="1 1 1"></a-gltf-model>
+</a-entity> -->
+<!-- 
+<a-entity id="spreadGallery2a">
+    <a-gltf-model src="#spreadGallery2" position="0 0 0" scale="0.1 0.1 0.1"></a-gltf-model>
+</a-entity> -->
+
+
+<a-entity id="mclaren1a">
+    <a-gltf-model src="#mclaren1" position="-12 0.03 -6" scale="0.9 0.9 0.9" rotation="0 90 0"></a-gltf-model>
+</a-entity>
+
+
+<a-entity id="lambo2a">
+    <a-gltf-model src="#lambo2" position="-4 0.03 -6" scale="1.15 1.15 1.15" rotation="0 90 0" animation-mixer="clip: Hover;"></a-gltf-model>
 </a-entity>
 
 
