added new 360 images - built olabs home office page

--- a/spreadshield2.html
+++ b/spreadshield2.html
@@ -24,7 +24,7 @@
 <body>
 
     <div id="vrScene">
-        <a-scene stats avatar-recorder fog="type: exponential; color: #222; density: 0.001" vr-mode="enabled: true;" loading-screen="dotsColor: aqua; backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
+        <a-scene avatar-recorder fog="type: exponential; color: #222; density: 0.001" vr-mode="enabled: true;" loading-screen="dotsColor: aqua; backgroundColor: black" reflection="directionalLight:a-light#dirlight;">
             <a-assets>
                 <a-asset-item id="vrSpreadCity" src="./public/media/3d-model/city.glb"></a-asset-item>
                 <a-asset-item id="cityBlock1" src="./public/media/3d-model/city-block_1a.glb"></a-asset-item>
@@ -163,7 +163,7 @@
 </a-entity>
 
 <a-entity id="charger1a">
-    <a-gltf-model src="#charger1" position="8 0.175 7" scale="0.036 0.036 0.036" rotation="0 -10 -5.5" animation-mixer="clip: Hover;"></a-gltf-model>
+    <a-gltf-model src="#charger1" position="8 0.175 7" scale="0.03 0.03 0.03" rotation="0 -10 -5.5" animation-mixer="clip: Hover;"></a-gltf-model>
 </a-entity>
 
 <a-entity id="rrGhost1a">
