--- a/vr3dR.html
+++ b/vr3dR.html
@@ -25,10 +25,11 @@
                     <img id="diningroom" src="./public/media/image/360/dwelling/apartment/1/2.jpg" alt="">
                     <img id="kitchen" src="./public/media/image/360/dwelling/apartment/1/3.jpg" alt="">
                     <img id="bedroom" src="./public/media/image/360/dwelling/apartment/1/4.jpg" alt="">
+                    <img id="officeR" src="./public/media/image/360/dwelling/house/office/L/1a.png" alt="">
 
                 </a-assets>
 
-                <a-sphere material="src: #bedroom; side: double;" scale="0.1 0.1 0.1" position="0.0025 1.6 0" rotation="0 1.5 0"></a-sphere>
+                <a-sphere material="src: #officeR; side: double;" scale="0.1 0.1 0.1" position="0.0025 1.6 0" rotation="0 1.5 0"></a-sphere>
 
             </a-scene>
 
