--- a/myspread.html
+++ b/myspread.html
@@ -33,7 +33,7 @@
             <a-asset-item id="shed1" src="./public/media/3d-model/demo-ranch/structures/shed_1a.glb"></a-asset-item>
             <a-asset-item id="forest" src="./public/media/3d-model/demo-ranch/landscape/forest.glb"></a-asset-item>
             
-            <a-asset-item id="lambo2" src="./public/media/3d-model/assets/vehicle/terrain/passenger/convertible/lambo_2a.glb"></a-asset-item>
+            <a-asset-item id="lambo2" src="./public/media/3d-model/assets/vehicle/terrain/passenger/convertible/lambo_2b.glb"></a-asset-item>
 
             <a-asset-item id="zombie1" src="./public/media/3d-model/demo-ranch/zombies/zombie.glb"></a-asset-item>
 
@@ -62,7 +62,10 @@
 
         
 
-        <a-gltf-model src="#lambo2" position="7.9 -0.13 3.8" scale="1.25 1.25 1.25" rotation="0 -10 0" animation-mixer="loop: pingpong;"></a-gltf-model>
+        <!-- <a-gltf-model src="#lambo2" position="7.9 -0.13 3.8" scale="1 1 1" rotation="0 -10 0" animation-mixer="loop: pingpong;"></a-gltf-model> -->
+        <a-gltf-model src="#lambo2" position="7.9 0.79891 4.81603" scale="0.8 0.8 0.8" rotation="0 -10 0"
+            animation-mixer="loop: pingpong"
+            gltf-model="./public/media/3d-model/assets/vehicle/terrain/passenger/convertible/lambo_2b.glb"></a-gltf-model>
 
 
         <a-gltf-model src="#zombie1" position="0 0.025 -5" scale="1.2 1.2 1.2" rotation="0 0 0" animation-mixer></a-gltf-model>
