added gaming link to index page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                                 <span>WideSpread</span>
                             </a>
                         </div>
+                        <div class="site-link">
+                            <img src="./public/media/image/rectangular/system/icons/link.png" alt="">
+                            <a href="./myspread.html">
+                                <span>Game Testing</span>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
