--- a/myspread2.html
+++ b/myspread2.html
@@ -165,7 +165,8 @@
         <!-- Ambience Background Sound -->
         <a-sound src="src: #ambience1" autoplay="true" position="0 0 0" preload="auto"></a-sound>
 
-        <a-entity id="userRig" position="0 2.2 3">
+        <!-- <a-entity id="userRig" position="0 2.2 3"> -->
+        <a-entity id="userRig" position="11.118 2 4.513">
             <a-entity camera look-controls wasd-controls listener mouse-cursor>
                 <a-entity position="0 0 -3" geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.05;"
                     material="color: orangered; opacity: 0.5; shader: flat" cursor="maxDistance: 30; fuse: true">
@@ -207,13 +208,13 @@
 
     <!-- Vehicle FRONT LEFT Light #1 -->
         <a-entity
-            light="color: #abd8d8; type: spot; intensity: 3.68; castShadow: true; angle: 65; decay: 0.58; distance: 25.13; penumbra: 1; shadowBias: 2.12; shadowCameraFov: 120; shadowCameraBottom: -3; groundColor: #1a3233"
+            light="color: #abd8d8; type: spot; intensity: 3.68; castShadow: true; angle: 30; decay: 0.58; distance: 25.13; penumbra: 1; shadowBias: 2.12; shadowCameraFov: 120; shadowCameraBottom: -3; groundColor: #1a3233"
             data-aframe-default-light="" aframe-injected="" visible="" position="8.49084 0.92195 6.04638"
             rotation="0 175 0"></a-entity>
 
     <!-- Vehicle FRONT RIGHT Light #1 -->
 <a-entity
-    light="color: #abd8d8; type: spot; intensity: 3.68; castShadow: true; angle: 65; decay: 0.58; distance: 25.13; penumbra: 1; shadowBias: 2.12; shadowCameraFov: 120; shadowCameraBottom: -3; groundColor: #1a3233"
+    light="color: #abd8d8; type: spot; intensity: 3.68; castShadow: true; angle: 30; decay: 0.58; distance: 25.13; penumbra: 1; shadowBias: 2.12; shadowCameraFov: 120; shadowCameraBottom: -3; groundColor: #1a3233"
     data-aframe-default-light="" aframe-injected="" visible="" position="6.31798 1.07566 6.67857"
     rotation="0 175 0"></a-entity>
 
