--- a/myspread2.html
+++ b/myspread2.html
@@ -274,7 +274,7 @@
             vrPlayer = document.getElementById("vr3dPlayer"),
             toggleFullscreenButton = document.getElementById("fullscreenButton"),
             vrFullscreenOnBtn = document.getElementById("vrFullscreenOnBtn"),
-            vrFullscreenOffBtn = document.getElementById("vrFullscreenOffBtn")
+            vrFullscreenOffBtn = document.getElementById("vrFullscreenOffBtn"),
             walkF = document.getElementById("walkF"),
             userRig = document.getElementById("userRig")
     
